# kiss3d

./: .gitattributes  .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DRM_IMPLEMENTATION_PLAN.md  DRM_REFACTOR_PLAN.md  DRM_STATUS.md  README.md  run_all_examples.sh
.github/workflows/: build.yml
.run/: README.md  add_remove (web).run.xml  add_remove.run.xml  antialiasing (web).run.xml  antialiasing.run.xml  aov.run.xml  blend_modes2d (web).run.xml  blend_modes2d.run.xml  camera (web).run.xml  camera.run.xml  camera_modes (web).run.xml  camera_modes.run.xml  clippy.run.xml  clustered_lights (web).run.xml  clustered_lights.run.xml  color_grading (web).run.xml  color_grading.run.xml  cube (web).run.xml  cube.run.xml  custom_material (web).run.xml  custom_material.run.xml  custom_mesh (web).run.xml  custom_mesh.run.xml  custom_mesh_shared (web).run.xml  custom_mesh_shared.run.xml  dda_raycast2d (web).run.xml  dda_raycast2d.run.xml  depth_of_field (web).run.xml  depth_of_field.run.xml  effect_chain2d (web).run.xml  effect_chain2d.run.xml  event (web).run.xml  event.run.xml  fog (web).run.xml  fog.run.xml  global_illumination2d (web).run.xml  global_illumination2d.run.xml  gltf (web).run.xml  gltf.run.xml  group (web).run.xml  (+105 more)
assets/: kiss3d-logo.af
examples/: README_DRM_TESTS.md  add_remove.rs  antialiasing.rs  aov.rs  blend_modes2d.rs  camera.rs  camera_modes.rs  clustered_lights.rs  color_grading.rs  cube.rs  custom_material.rs  custom_mesh.rs  custom_mesh_shared.rs  dda_raycast2d.rs  decomp.rs  depth_of_field.rs  drm_cube.rs  drm_cubes.rs  drm_display_test.rs  drm_offscreen_cube.rs  drm_test.rs  drm_test_phase1.rs  drm_test_phase2.rs  effect_chain2d.rs  event.rs  fog.rs  global_illumination2d.rs  gltf.rs  group.rs  hdr_bloom.rs  inspector.rs  instancing2d.rs  instancing3d.rs  lighting2d.rs  lines.rs  lines2d.rs  material_pbr.rs  mirror.rs  mirror_sphere.rs  mouse_events.rs  (+44 more)
examples/media/: credits.txt
examples/media/parallax/: CREDITS.md
src/: color.rs  lib.rs  light.rs  light2d.rs  planar_point_renderer.rs  planar_polyline_renderer.rs  shader_validity.rs
src/builtin/: aov.rs  aov.wgsl  aov_visualize.wgsl  auto_exposure_adapt.wgsl  auto_exposure_meter.wgsl  cas.wgsl  clustered.rs  clustered_build.wgsl  clustered_cull.wgsl  common.wgsl  crt.wgsl  cube_to_equirect.wgsl  default.wgsl  deform.rs  dof.wgsl  env_downsample.wgsl  fxaa.wgsl  gi2d_cascade.wgsl  gi2d_cascade_composite.wgsl  gi2d_composite.wgsl  gi2d_field.wgsl  gi2d_jfa.wgsl  gi2d_jfa_seed.wgsl  grayscales.wgsl  hdr_bloom.wgsl  hdr_oit.wgsl  hdr_tonemap.wgsl  lit2d.wgsl  lit_material2d.rs  loupe.wgsl  mod.rs  normals.wgsl  normals_material.rs  object2d.wgsl  object_material.rs  object_material2d.rs  oculus.wgsl  pbr_env.wgsl  planar.wgsl  planar_object_material.rs  (+31 more)
src/builtin/raytrace/: blit.wgsl  denoise.wgsl  rt_intersect_bvh.wgsl  rt_intersect_rayquery.wgsl  rt_kernel.wgsl  rt_preamble.wgsl  tonemap.wgsl
src/camera/: arc_ball.rs  camera.rs  camera2d.rs  camera3d.rs  first_person.rs  first_person3d.rs  first_person_stereo.rs  first_person_stereo3d.rs  fixed_view.rs  fixed_view2d.rs  fixed_view2d_topleft.rs  fixed_view3d.rs  mod.rs  orbit3d.rs  sidescroll2d.rs
src/context/: context.rs  mod.rs
src/event/: window_event.rs
src/loader/: gltf.rs  mod.rs  mtl.rs  obj.rs
src/planar_camera/: fixed_view.rs  planar_camera.rs  sidescroll.rs
src/post_processing/: cas.rs  crt.rs  fxaa.rs  gi2d.rs  grayscales.rs  hdr.rs  loupe.rs  mod.rs  oculus_stereo.rs  post_processing_effect.rs  sobel_edge_highlight.rs  waves.rs
src/procedural/: bezier.rs  capsule.rs  cone.rs  cuboid.rs  cylinder.rs  quad.rs  render_mesh.rs  render_polyline.rs  sphere.rs  utils.rs
src/procedural/path/: arrowhead_cap.rs  no_cap.rs  path.rs  polyline_path.rs  polyline_pattern.rs
src/renderer/: dof.rs  egui_renderer.rs  ibl.rs  mod.rs  point_renderer.rs  point_renderer2d.rs  point_renderer3d.rs  polyline_renderer.rs  polyline_renderer2d.rs  polyline_renderer3d.rs  reflection_probe.rs  reflector.rs  renderer.rs  skybox.rs  ssao.rs  ssr.rs  timings.rs  transmission.rs
src/renderer/raytracer/: accumulation.rs  bvh.rs  denoise.rs  environment.rs  gpu_scene.rs  mod.rs  pipeline.rs  scene_data.rs  tex_array.rs  tonemap.rs
src/resource/: dynamic_buffer.rs  framebuffer_manager.rs  gpu_vector.rs  material.rs  material_manager2d.rs  material_manager3d.rs  mesh.rs  mesh2d.rs  mesh3d.rs  mesh_manager2d.rs  mesh_manager3d.rs  mod.rs  pipeline_cache.rs  planar_mesh.rs  texture_manager.rs  vertex_index.rs
src/scene/: animation.rs  mod.rs  object.rs  object2d.rs  object3d.rs  planar_object.rs  planar_scene_node.rs  scene_node.rs  scene_node2d.rs  scene_node3d.rs  sprite.rs  tilemap.rs
src/text/: font.rs  glyph.rs  renderer.rs
src/window/: aov.rs  canvas.rs  drawing.rs  egui_integration.rs  events.rs  inspector.rs  mod.rs  offscreen.rs  recording.rs  rendering.rs  screenshot.rs  wgpu_canvas.rs  window.rs  window.rs.bak  window_cache.rs  window_common.rs
src/window/drm/: card.rs  display_thread.rs  drm_canvas.rs  drm_canvas_wrapper.rs  drm_window.rs  mod.rs
src/window/inspector/: global.rs  mod.rs  scene2d.rs  scene3d.rs  widgets.rs
website/: .htaccess  README.md  docusaurus.config.ts  package-lock.json  publish.sh
website/scripts/: build-demos.sh
website/src/css/: custom.css
website/src/pages/: examples.module.css  examples.tsx  index.module.css  index.tsx
