[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
name    = "kiss3d"
version = "0.38.0"

autoexamples = true
description  = "Keep it simple, stupid, 2D and 3D graphics engine for Rust."
edition      = "2018"
keywords     = ["graphics", "wgpu", "KISS"]
license      = "BSD-3-Clause"
readme       = "README.md"
repository   = "https://github.com/sebcrozet/kiss3d"

include = [
    "src/**/*.rs",
    "src/**/*.wgsl",
    "src/text/*.ttf",
    "examples/**/*.rs",
    "examples/media",
    "examples/Cargo.toml",
    "Cargo.toml",
    "LICENSE",
    "Readme.md",
]


[lib]
name = "kiss3d"
path = "src/lib.rs"

[features]
egui = ["dep:egui", "dep:egui-wgpu"]
vertex_index_u32 = []
recording = ["dep:ffmpeg-the-third"]

[dependencies]
bitflags     = { version = "2", features = ["serde"] }
bytemuck     = { version = "1", features = ["derive"] }
egui         = { version = "0.32", optional = true, default-features = true }
egui-wgpu    = { version = "0.32", optional = true }
either       = "1"
image        = "0.25"
instant      = { version = "0.1", features = ["wasm-bindgen"] }
kiss3d-macro = { version = "0.36.0", path = "kiss3d-macro" }
log          = "0.4"
nalgebra     = { version = "0.34", features = ["bytemuck"] }
ffmpeg-the-third = { version = "4", optional = true }
num-traits   = "0.2"
parry3d      = "0.25"
rusttype     = { version = "0.9", features = ["gpu_cache"] }
serde        = "1"
serde_derive = "1"
wgpu         = "25"
winit        = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.wasm32-unknown-unknown.dependencies]
oneshot = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3", features = [
    "console",
    "KeyEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "HtmlCanvasElement",
    "HtmlElement",
    "Window",
    "UiEvent",
    "Event",
    "EventTarget",
    "Element",
    "DomRect",
] }

[dev-dependencies]
env_logger = "0.11"
nalgebra   = { version = "0.34", features = ["rand", "bytemuck"] }
parry2d    = "0.25"
rand       = "0.9"